docker/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener-http
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: http_route
                virtual_hosts:
                  - name: http_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: positions-http
              http_filters:
                - name: envoy.filters.http.compressor
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                    response_direction_config:
                      common_config:
                        min_content_length: 100
                        content_type:
                          - text/html
                          - application/javascript
                          - application/json
                      disable_on_etag_header: true
                    compressor_library:
                      name: text_optimized
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                        memory_level: 3
                        window_bits: 10
                - name: envoy.filters.http.decompressor
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.decompressor.v3.Decompressor
                    decompressor_library:
                      name: upload
                      typed_config:
                        "@type": "type.googleapis.com/envoy.extensions.compression.gzip.decompressor.v3.Gzip"
                        window_bits: 9
                        chunk_size: 8192
                    response_direction_config:
                      common_config:
                        enabled:
                          default_value: false
                          runtime_key: response_decompressor_enabled
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: listener-https
      address:
        socket_address: { address: 0.0.0.0, port_value: 5443 }
      listener_filters:
      - name: "envoy.filters.listener.tls_inspector"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      filter_chains:
        - filter_chain_match:
            transport_protocol: tls
            application_protocols: [h2]
          filters:
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: positions-https
              stat_prefix: https_passthrough
    - name: listener-grpc-http
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_grpc_http
              route_config:
                name: grpc_route
                virtual_hosts:
                  - name: grpc_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: positions-grpc-http
                          timeout: 0s
                          max_stream_duration:
                           grpc_timeout_header_max: 0s
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-portfolio-size,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: grpc-status,grpc-message,x-portfolio-size
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: listener-grpc-https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8082
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: https_route
                virtual_hosts:
                  - name: https_service
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: positions-grpc-http
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-portfolio-size,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: grpc-status,grpc-message,x-portfolio-size
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: '/etc/ssl/server.crt'
                  private_key:
                    filename: '/etc/ssl/server.key'

  clusters:
    - name: positions-http
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: positions-http
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: gin-server
                    port_value: 8080
    - name: positions-https
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      # typed_extension_protocol_options:
      #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      #     explicit_http_config:
      #       http2_protocol_options: {}
      load_assignment:
        cluster_name: positions-https
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: gin-server
                    port_value: 8443
      # transport_socket:
      #   name: envoy.transport_sockets.tls
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    - name: positions-grpc-http
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: positions-grpc-http
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: gin-server
                    port_value: 9080
    - name: positions-grpc-https
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: positions-grpc-https
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: gin-server
                    port_value: 9443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
